<resources>
    <string name="app_name">Limop</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="esquecesenha">Esqueceu sua Senha?</string>
    <string name="login">Login</string>
    <string name="camposVazios">Algum campo está vazio</string>
    <string name="facebook_app_id">974977215983374</string>
    <string name="fb_login_protocol_scheme">fb974977215983374</string>
    <string name="primeiro_nome">Nome *</string>
    <string name="email_cont">E-mail *</string>
    <string name="tel_cel">Telefone Celular *</string>
    <string name="assunto">Assunto *</string>
    <string name="msg">Mensagem *</string>
    <string name="obg">* Campos obrigatórios</string>
    <string name="sendmsg">Enviar Mensagem</string>
    <string name="cancelar">Cancelar</string>
    <string name="andreatta">Para recuperar sua senha, por favor informe seu e-mail no campo abaixo:</string>
    <string name="esqsenha">Enviar</string>
    <string name="vendas">Vendas</string>
    <string name="descricao_venda">Verifique as vendas no sistema</string>
    <string name="compras">Compras</string>
    <string name="descricao_compra">Verifique as compras no sistema</string>
    <string name="users">Usuários</string>
    <string name="descricao_user">Verifique os usuários no sistema</string>
    <string name="acessos">Acessos</string>
    <string name="descricao_acessos">Verifique os acessos no sistema</string>
    <string name="clientes">Clientes</string>
    <string name="descricao_clientes">Verifique os clientes</string>
    <string name="parcelas_vencer">Parcelas a Vencer</string>
    <string name="descricao_parc_vencer">Verifique as parcelas a vencer</string>
    <string name="ordem_servico">Ordem de Serviço</string>
    <string name="descricao_os">Verifique as ordem de serviço</string>
    <string name="relatorio_venda">Relatório de Vendas</string>
    <string name="descricao_relatorio_venda">Verifique os relatórios de venda</string>
    <string name="graficos">Gráficos</string>
    <string name="descricao_graficos">Verifique os gráficos</string>
    <string-array name="fornecedores">
        <item>...</item>
    </string-array>
    <string name="descricao_fornecedores">Verifique os fornecedores</string>
    <string name="produtos">Produtos</string>
    <string name="descricao_produtos">Verifique os produtos</string>
    <string name="servicos">Serviços</string>
    <string name="descricao_servicos">Verifique os serviços</string>
    <string name="transportadoras">Transportadoras</string>
    <string name="descricao_transportadoras">Verifique as transportadoras</string>
    <string name="situacao_estoque">Situação do Estoque</string>
    <string name="descricao_situ_estoque">Verifique a situação do estoque</string>
    <string name="nome_servico">Nome do Serviço</string>
    <string name="valor_custo">Valor de Custo (R$)</string>
    <string name="valor_venda">Valor de Venda (R$)</string>
    <string name="cadastrar_servico">Cadastrar</string>
    <string name="acoes">Ações</string>
    <string name="editar_user">Editar Usuário</string>
    <string name="nome_usuario">Nome do Usuário</string>
    <string name="imagem">Imagem</string>
    <string name="data_nascimento">Data de Nascimento</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="masc">Masculino</string>
    <string name="fem">Feminino</string>
    <string-array name="tipoUsuario">
        <item>Administrador</item>
        <item>Usuário</item>
    </string-array>
    <string name="cnpj">CNPJ</string>
    <string name="razao">Razão Social</string>
    <string name="inscricao">Inscrição Estadual</string>
    <string name="cpf">CPF</string>
    <string name="rg">RG</string>
    <string name="nome_fornecedor">Nome do Fornecedor</string>
    <string name="nome_transportadora">Nome da Transportadora</string>
    <string name="tel_comercial">Telefone Comercial</string>
    <string name="tel_cell">Telefone Celular</string>
    <string name="cep">CEP</string>
    <string name="estado">Estado</string>
    <string name="cidade">Cidade</string>
    <string name="bairro">Bairro</string>
    <string name="rua">Rua</string>
    <string name="numero">Número</string>
    <string name="complemento">Complemento</string>
    <string name="obs">Observações</string>
    <string name="valor_frete">Valor Frete</string>
    <string-array name="tipo">
        <item>Física</item>
        <item>Jurídica</item>
    </string-array>
    <string name="tipoT">Selecione o tipo</string>
    <string name="nome_cliente">Nome do Cliente</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="editar">Editar</string>
    <string name="foto">Foto</string>
    <string name="disponivel_estoque">Disponível em Estoque</string>
    <string name="min_estoque">Mínimo em Estoque</string>
    <string name="max_estoque">Máximo em Estoque</string>
    <string name="peso_liquido">Peso Líquido</string>
    <string name="peso_bruto">Peso Bruto</string>
    <string name="categoriaProd">Selecione a categoria</string>
    <string name="nome_produto">Nome do Produto</string>
    <string name="historico">Histórico de Movimentação</string>
    <string name="servicoo">Serviço</string>
    <string name="forma_pag">Forma de Pagamento</string>
    <string name="cond_pag">Condição Pagamento</string>
    <string name="produtoos">Produto</string>
    <string-array name="contrato">
        <item>Cobrança</item>
        <item>Vigência</item>
    </string-array>
    <string name="data_venda">Data da venda</string>
    <string name="stts_negociacaoo">Status da Negociação</string>
    <string-array name="stts_negociacao">
        <item>Venda</item>
        <item>Orçamento</item>
        <item>Orçamento Aceito</item>
        <item>Orçamento Recusado</item>
    </string-array>
    <string-array name="cond_pagamento">
        <item>Á vista</item>
        <item>2x</item>
        <item>3x</item>
        <item>4x</item>
        <item>5x</item>
        <item>6x</item>
        <item>7x</item>
        <item>8x</item>
        <item>9x</item>
        <item>10x</item>
        <item>11x</item>
        <item>12x</item>
        <item>13x</item>
        <item>14x</item>
        <item>15x</item>
        <item>16x</item>
        <item>17x</item>
        <item>18x</item>
        <item>19x</item>
        <item>20x</item>
        <item>21x</item>
        <item>22x</item>
        <item>23x</item>
        <item>24x</item>
        <item>25x</item>
        <item>26x</item>
        <item>27x</item>
        <item>28x</item>
        <item>29x</item>
        <item>30x</item>
        <item>31x</item>
        <item>32x</item>
        <item>33x</item>
        <item>34x</item>
        <item>35x</item>
        <item>36x</item>
        <item>37x</item>
        <item>38x</item>
        <item>39x</item>
        <item>40x</item>
        <item>41x</item>
        <item>42x</item>
        <item>43x</item>
        <item>44x</item>
        <item>45x</item>
        <item>46x</item>
        <item>47x</item>
        <item>48x</item>
    </string-array>
    <string-array name="forma_pagamento">
        <item>Boleto</item>
        <item>Cartão de Crédito</item>
        <item>Cartão de Débito</item>
    </string-array>
    <string name="vencimento">Vencimento</string>
    <string name="desconto">Desconto</string>
    <string name="valor_unitario">Valor Unitario</string>
    <string name="qtd">Quantidade</string>
    <string name="parcelasvencer">Parcelas a Vencer</string>
    <string name="cliente">Cliente</string>
    <string name="data_inicio">Data de Início</string>
    <string name="stts">Status</string>
    <string name="previsao_entrega">Previsão da Entrega</string>
    <string name="equipamento_recebido">Equipamento Recebido</string>
    <string name="n_serie">N° da série</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="obs_equipamento">Observações sobre o recebimento do Equipamento</string>
    <string name="descricao_defeito">Descrição do problema ou defeito encontrado</string>
    <string name="descricao_servico">Descrição do serviço que será prestado</string>
    <string name="obs_interna">Observações Internas</string>
    <string-array name="sttsOS">
        <item>Orçamento Pendente</item>
        <item>Serviço Pendente</item>
        <item>Em Andamento</item>
        <item>Concluído</item>
        <item>Produto em Processo</item>
    </string-array>
    <string name="title_activity_principal">"Página inicial "</string>
    <string name="mensal">Selecione o mês</string>
    <string name="anual">Selecione o ano</string>
    <string name="inicio">Data Inicial</string>
    <string name="fim">Data Final</string>
    <string name="gerar">Gerar</string>
    <string name="tipoRelatorio">Selecione o Tipo de Relatório</string>
    <string name="semanal2">Semanal</string>
    <string name="mensal2">Mensal</string>
    <string name="anual2">Anual</string>
    <string name="categoriaProdInv">"Categorias "</string>
    <string name="fornecedor">"Fornecedor "</string>
    <string name="qtdEstoque">"Quantidade em Estoque "</string>
    <string name="qtdEstoqueMenor">"Quantidade em Estoque menor que"</string>
    <string name="Visualizar">" Visualizar"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_insert_fornecedor">InsertFornecedor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adicionar">Adicionar</string>
    <string name="qtdAdd">Quantidade para Adicionar:</string>
    <string name="qtdAtual">Quantidade Atual: </string>
    <string name="titulo">Adicionar Produto - </string>
    <string name="qtdAdd2">Quantidade para Adicionar</string>
    <string-array name="meses">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>
    <string-array name="anos">
        <item>2017</item>
        <item>2018</item>
    </string-array>
    <string name="editarCliente">Editar Cliente</string>
    <string name="excluirCliente">Excluir Cliente</string>
    <string name="desejaExcluirEsseCliente">Deseja Excluir Esse Cliente ?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="cepinvalido">Cep Invalido!</string>
    <string name="preenchaoscamposcorretamente">"Preencha os campos corretamente!"</string>
    <string name="editadocomsucesso">"Editado com Sucesso"</string>
    <string name="erroimagem">"Erro ao receber a imagem: Imagem não encontrada!"</string>
    <string name="quantidadeinvalida">"Quantidade Invalida !"</string>
    <string name="errosenha">"A senha deve ser maior ou igual a 7 caracteres!"</string>
    <string name="errosenha2">"A senhas não conferem"</string>
    <string name="errodownload">"É necessário garantir a permissão para download dos relatórios!"</string>
    <string name="errointernet">"Sem conexão com a internet"</string>
    <string name="errousuario">"Usuário não encontrado"</string>
    <string name="erropermissao">"É necessário garantir a permissão para download dos relatórios!"</string>
    <string name="consultar">Consultar valores arrecadados</string>
    <string name="sair">Sair</string>
</resources>