<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.estoques.limop.limop.EditarFornecedor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:hint="@string/nome_fornecedor"
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_list"
            android:drawableStart="@drawable/ic_list"
            android:layout_marginTop="30dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

        <Spinner
            android:id="@+id/tipo"
            android:drawablePadding="-0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/tipo"
            android:background="@drawable/input_style_not"
            android:prompt="@string/tipoT"
            android:layout_marginTop="24dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp">
        </Spinner>

        <EditText
            android:hint="@string/cnpj"
            android:id="@+id/cnpj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_business"
            android:drawableStart="@drawable/ic_business"
            android:layout_marginTop="30dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

        <EditText
            android:hint="@string/razao"
            android:id="@+id/razao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_business"
            android:drawableStart="@drawable/ic_business"
            android:layout_marginTop="30dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

        <EditText
            android:hint="@string/inscricao"
            android:id="@+id/inscricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_business"
            android:drawableStart="@drawable/ic_business"
            android:layout_marginTop="30dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

        <EditText
            android:hint="@string/cpf"
            android:id="@+id/cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_person"
            android:drawableStart="@drawable/ic_person"
            android:layout_marginTop="30dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

        <EditText
            android:hint="@string/rg"
            android:id="@+id/rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_person"
            android:drawableStart="@drawable/ic_person"
            android:layout_marginTop="30dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

        <EditText
            android:hint="@string/email"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_email"
            android:drawableStart="@drawable/ic_email"
            android:layout_marginTop="30dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

        <EditText
            android:hint="@string/tel_comercial"
            android:id="@+id/tel_comercial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_phone"
            android:drawableStart="@drawable/ic_phone"
            android:layout_marginTop="30dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

        <EditText
            android:hint="@string/tel_cell"
            android:id="@+id/tel_celular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_phone_iphone"
            android:drawableStart="@drawable/ic_phone_iphone"
            android:layout_marginTop="30dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

        <EditText
            android:hint="@string/cep"
            android:id="@+id/cep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_place"
            android:drawableStart="@drawable/ic_place"
            android:layout_marginTop="30dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

        <EditText
            android:hint="@string/estado"
            android:id="@+id/estado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_place"
            android:drawableStart="@drawable/ic_place"
            android:layout_marginTop="30dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

        <EditText
            android:hint="@string/cidade"
            android:id="@+id/cidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_place"
            android:drawableStart="@drawable/ic_place"
            android:layout_marginTop="30dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

        <EditText
            android:hint="@string/bairro"
            android:id="@+id/bairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_home"
            android:drawableStart="@drawable/ic_home"
            android:layout_marginTop="30dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

        <EditText
            android:hint="@string/rua"
            android:id="@+id/rua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_home"
            android:drawableStart="@drawable/ic_home"
            android:layout_marginTop="30dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

        <EditText
            android:hint="@string/numero"
            android:id="@+id/numero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_home"
            android:drawableStart="@drawable/ic_home"
            android:layout_marginTop="30dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

        <EditText
            android:hint="@string/complemento"
            android:id="@+id/complemento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_home"
            android:drawableStart="@drawable/ic_home"
            android:layout_marginTop="30dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

        <EditText
            android:hint="@string/obs"
            android:id="@+id/obs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_list"
            android:drawableStart="@drawable/ic_list"
            android:layout_marginTop="30dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editar"
            android:onClick="updateFornecedor"
            android:textColor="#FFF"
            android:background="@drawable/btn_login"
            android:textSize="16sp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"/>

    </LinearLayout>

</ScrollView>