<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textColor="#000"
            android:textSize="15sp"
            android:id="@+id/titulo"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo" />

        <TextView
            android:textColor="#000"
            android:textSize="15sp"
            android:id="@+id/qtdAtual"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qtdAtual" />

        <TextView
            android:textColor="#000"
            android:textSize="15sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qtdAdd" />

        <EditText
            android:hint="@string/qtdAdd2"
            android:id="@+id/qtd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

        <TextView
            android:textColor="#000"
            android:textSize="15sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valor_custo" />

        <EditText
            android:hint="@string/valor_custo"
            android:id="@+id/valorCusto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

    </LinearLayout>

</ScrollView>

