<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.limopestoques.limop.InsertUsuario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:hint="@string/nome_usuario"
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_list"
            android:drawableStart="@drawable/ic_list"
            android:layout_marginTop="30dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

        <TextView
            android:textColor="#000"
            android:textSize="15sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipoT" />

        <Spinner
            android:id="@+id/tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/tipoUsuario"
            android:prompt="@string/tipoT"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="-0dp"
            android:background="@drawable/input_style_not">
        </Spinner>

        <TextView
            android:textColor="#000"
            android:textSize="15sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/imagem" />

        <ImageView
            android:id="@+id/img"
            android:src="@drawable/add_foto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:hint="@string/email"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_email"
            android:drawableStart="@drawable/ic_email"
            android:layout_marginTop="30dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

        <EditText
            android:hint="@string/senha"
            android:id="@+id/senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_senha"
            android:drawableStart="@drawable/ic_senha"
            android:layout_marginTop="30dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

        <EditText
            android:hint="@string/confirmar_senha"
            android:id="@+id/confirmar_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_senha"
            android:drawableStart="@drawable/ic_senha"
            android:layout_marginTop="30dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

        <EditText
            android:hint="@string/data_nascimento"
            android:id="@+id/data_nascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:inputType="date"
            android:drawableLeft="@drawable/ic_data"
            android:drawableStart="@drawable/ic_data"
            android:layout_marginTop="30dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sexo"

            android:layout_marginTop="12dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_style_not"
                android:id="@+id/masc"
                android:text="@string/masc"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_style_not"
                android:id="@+id/fem"
                android:text="@string/fem"/>

        </RadioGroup>

        <Button
            android:onClick="validarCampos"
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            android:textColor="#FFF"
            android:background="@drawable/btn_login"
            android:textSize="16sp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"/>

    </LinearLayout>

</ScrollView>

